; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/extr_ec.c_ec_check_sci_sync.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/extr_ec.c_ec_check_sci_sync.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.acpi_ec = type { i32 }

@ACPI_EC_FLAG_SCI = common dso_local global i32 0, align 4
@EC_FLAGS_QUERY_PENDING = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.acpi_ec*, i32)* @ec_check_sci_sync to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ec_check_sci_sync(%struct.acpi_ec* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.acpi_ec*, align 8
  %5 = alloca i32, align 4
  store %struct.acpi_ec* %0, %struct.acpi_ec** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* @ACPI_EC_FLAG_SCI, align 4
  %8 = and i32 %6, %7
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %20

10:                                               ; preds = %2
  %11 = load i32, i32* @EC_FLAGS_QUERY_PENDING, align 4
  %12 = load %struct.acpi_ec*, %struct.acpi_ec** %4, align 8
  %13 = getelementptr inbounds %struct.acpi_ec, %struct.acpi_ec* %12, i32 0, i32 0
  %14 = call i32 @test_and_set_bit(i32 %11, i32* %13)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %19, label %16

16:                                               ; preds = %10
  %17 = load %struct.acpi_ec*, %struct.acpi_ec** %4, align 8
  %18 = call i32 @acpi_ec_sync_query(%struct.acpi_ec* %17)
  store i32 %18, i32* %3, align 4
  br label %21

19:                                               ; preds = %10
  br label %20

20:                                               ; preds = %19, %2
  store i32 0, i32* %3, align 4
  br label %21

21:                                               ; preds = %20, %16
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local i32 @test_and_set_bit(i32, i32*) #1

declare dso_local i32 @acpi_ec_sync_query(%struct.acpi_ec*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
